<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project02.csc214.coucou.LoginActivity">

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:id="@+id/edit_user_name"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/edit_password"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_below="@id/edit_password"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_up"
        android:textSize="20sp"
        android:layout_below="@id/button_login"
        android:textAlignment="center"
        android:paddingTop="30dp"
        />
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/text_login"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
