<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project02.csc214.coucou.SignUpActivity">

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/edit_new_user_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@id/edit_new_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/edit_new_email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@id/edit_new_user_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <LinearLayout
        android:id="@+id/new_linear_buttons"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_new_password">

        <Button
            android:id="@+id/button_sign_up_new"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            />
        <Button
            android:id="@+id/button_cancel_new"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
    </LinearLayout>

</RelativeLayout>
