<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project02.csc214.coucou.EditInfoActivity">

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="40dp"
        android:text="@string/edit_info_title" />

    <ImageView
        android:id="@+id/view_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/text_settings"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/profile_circle" />

    <LinearLayout
        android:id="@+id/layout_photo_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_profile_pic"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_take_pic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/camera_plus"
            android:padding="10dp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_upload_pic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/folder_icon"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_enter_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_photo_upload"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date" />

        <LinearLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/mm"/>
            <EditText
                android:id="@+id/edit_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/dd"/>
            <EditText
                android:id="@+id/edit_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:hint="@string/yyyy"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_home_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_town" />

        <EditText
            android:id="@+id/edit_home_town"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_short_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_bio" />

        <EditText
            android:id="@+id/edit_short_bio"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLength="120"
            android:minLines="2" />

        <LinearLayout
            android:id="@+id/new_linear_buttons"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_short_bio"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel_new"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_save_new"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
